# b01t

./: LICENSE  README.md  pyproject.toml
b01t/: README.md  __init__.py
b01t/core/: __init__.py  ancilla.py  builder.py  exact_builder.py  exact_lowering.py  exact_serde.py  exact_types.py  exact_validate.py  gates.py  safety.py  types.py
b01t/kit/: __init__.py  backend.py  cli.py  control.py  controlled.py  ir.py  registry.py  routing.py
b01t/kit/arithmetic/: __init__.py  adder.py  comparator.py  primitives.py
b01t/zoo/: __init__.py
b01t/zoo/amplitude_amplification/: __init__.py  amplify.py  diffusion.py
demos/bernstein_vazirani/: __init__.py  algorithm.py  oracle.py  test_bv.py
demos/best_arm/: __init__.py  arm_oracle.py  demo.py
demos/deutsch/: __init__.py  algorithm.py  oracle.py  test_deutsch.py
demos/grover_search/: __init__.py  search.py
demos/rollout/: README.md  __init__.py  bench.py
demos/shor/: __init__.py  circuit.py  classical.py  test_shor.py
demos/simon/: __init__.py  algorithm.py  oracle.py  test_simon.py
tests/: test_amplitude_amplification.py  test_arithmetic.py  test_bench_smoke.py  test_best_arm_correctness.py  test_coherent_ae.py  test_controlled_call.py  test_correctness.py  test_exact_core.py  test_grover.py  test_indexed_move.py  test_manifest.py  test_max_finding.py  test_modular.py  test_par_ancilla_lowering.py  test_qae.py  test_qft_qpe.py  test_rank_select_blocked.py  test_review_issues.py  test_rollout_epidemic.py  test_rollout_epidemic_eval.py  test_rollout_sway.py  test_rollout_sway_eval.py  test_wire_validation.py
(+58 files in other folders)
