[project]
name = "b01t-lang"
version = "0.1.0"
description = "A Python DSL for safe quantum programming with disciplined ancilla management"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Nishant Shukla"}]
keywords = ["quantum", "quantum-computing", "qiskit", "dsl"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["qiskit>=1.0"]

[project.scripts]
b01t = "b01t.kit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["b01t"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
